k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # meaning we are only creating 1 container out of this config file 
  selector: 
    matchLabels: 
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: diegoleoro/multi-worker-10-14
