k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  # we need to provide a selector so that the service that are creating know what set of pods it is supposed to be providing access to
  selector:
    component: web # also defined in the pod's labels section
  # ports that the service will expose and be avaialable on:
  ports:
    - port: 3000 # port property will be how other pods or other objects inside of our cluster are going to access the pod that this service is governing access to 
      targetPort: 3000 # targetPort property is going to be the port on the target port that we are providing access to
