k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP 
  selector:
    component: postgres # set of pods this service will look for
  ports:
    - port: 5432 # port that we specified in the postgres deployment
      targetPort: 5432
